se añade principalmente swagger a news y algunas clases nuevas que empezaré a usar para unir user con news

--- a/users/pom.xml
+++ b/users/pom.xml
@@ -65,6 +65,15 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.palmen</groupId>
+			<artifactId>news</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
