Revert "Se añade el feignclient para comunicar user con news , y la creación del servicio web"
This reverts commit b72e0392b4929e8e0d8681b8155802ad43906515.

--- a/eureka_server/src/main/resources/application.yml
+++ b/eureka_server/src/main/resources/application.yml
@@ -11,5 +11,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
+    register-with-eureka: false
+    fetch-registry: false
+    server-url:
+      defaultZone: http://localhost:${server.port}/eureka/
