--- a/news/src/main/resources/application.yml
+++ b/news/src/main/resources/application.yml
@@ -18,6 +18,13 @@ spring:
   config:
     import: optional:configserver:http://localhost:8888
     
+    
+springdoc:
+  api-docs:
+    path: /v3/api-docs
+  swagger-ui:
+    path: /swagger-ui.html
+    
 eureka:
   instance:
     hostname: localhost
